package com.risetogether.authentication.application.ports.in;

public interface DeleteExpiredUnverifiedUsersPort {
    void execute();
}